[gd_scene load_steps=14 format=3 uid="uid://dalvfnov2ethx"]

[ext_resource type="Script" uid="uid://dpsljbpakv6c2" path="res://scenes/game/game.gd" id="1_vrspl"]
[ext_resource type="PackedScene" uid="uid://c3c6kfn0562kw" path="res://entities/shield/Shield.tscn" id="2_7qcb4"]
[ext_resource type="PackedScene" uid="uid://8cqbmv244mu8" path="res://entities/ship/Ship.tscn" id="2_lyhax"]
[ext_resource type="Shader" uid="uid://l40cvho2yva5" path="res://scenes/game/Background.gdshader" id="2_qf6a8"]
[ext_resource type="PackedScene" uid="uid://deg7173fs7csd" path="res://entities/player/Player.tscn" id="2_vrspl"]
[ext_resource type="Texture2D" uid="uid://qmi044c2ltno" path="res://background.png" id="2_wnrko"]
[ext_resource type="FontFile" uid="uid://broid8c74c743" path="res://assets/fonts/Vipnagorgialla Bd.otf" id="5_qf6a8"]
[ext_resource type="PackedScene" uid="uid://gcg3hmsypl0f" path="res://overlays/game_over/GameOver.tscn" id="7_gg4pt"]
[ext_resource type="PackedScene" uid="uid://pedo02bkp3wv" path="res://overlays/wave_intro/WaveIntro.tscn" id="8_wnrko"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_56wml"]
shader = ExtResource("2_qf6a8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vrspl"]
size = Vector2(96, 137)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m44fu"]
size = Vector2(154, 136)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qcb4"]
size = Vector2(552, 43)

[node name="Game" type="Node2D"]
script = ExtResource("1_vrspl")
metadata/_edit_vertical_guides_ = [153.0, 650.0, 400.0]

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_56wml")
offset_right = 800.0
offset_bottom = 600.0
texture = ExtResource("2_wnrko")

[node name="ShipGroup" type="Node2D" parent="."]

[node name="Ship" parent="ShipGroup" instance=ExtResource("2_lyhax")]
position = Vector2(224, 72)

[node name="LeftWall" type="ColorRect" parent="."]
offset_left = 1.0
offset_right = 151.0
offset_bottom = 602.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="RightWall" type="ColorRect" parent="."]
offset_left = 650.0
offset_top = 1.0
offset_right = 800.0
offset_bottom = 603.0
color = Color(0.529412, 0.529412, 0.529412, 1)

[node name="Score" type="Label" parent="."]
offset_left = 160.0
offset_top = 6.0
offset_right = 641.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("5_qf6a8")
text = "Score: 0"

[node name="ShieldGroup" type="Node2D" parent="."]

[node name="Shield" parent="ShieldGroup" instance=ExtResource("2_7qcb4")]
position = Vector2(584, 480)

[node name="Shield2" parent="ShieldGroup" instance=ExtResource("2_7qcb4")]
position = Vector2(456, 480)

[node name="Shield3" parent="ShieldGroup" instance=ExtResource("2_7qcb4")]
position = Vector2(336, 480)

[node name="Shield4" parent="ShieldGroup" instance=ExtResource("2_7qcb4")]
position = Vector2(216, 480)

[node name="Aliens" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_vrspl")]
position = Vector2(336, 528)

[node name="LeftWallBody" type="StaticBody2D" parent="."]
collision_layer = 32

[node name="LeftWallCollider" type="CollisionShape2D" parent="LeftWallBody"]
position = Vector2(693, 530.5)
shape = SubResource("RectangleShape2D_vrspl")

[node name="RightWallBody" type="StaticBody2D" parent="."]
collision_layer = 32

[node name="RightWallCollider" type="CollisionShape2D" parent="RightWallBody"]
position = Vector2(78, 530)
shape = SubResource("RectangleShape2D_m44fu")

[node name="BulletCollector" type="Area2D" parent="."]
position = Vector2(-13, 13)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCollector"]
position = Vector2(389, -61)
shape = SubResource("RectangleShape2D_7qcb4")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="ShipTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 552.0
offset_right = 640.0
offset_bottom = 553.0

[node name="LivesGroup" type="Node2D" parent="."]

[node name="Overlays" type="Node" parent="."]

[node name="GameOver" parent="Overlays" node_paths=PackedStringArray("game") instance=ExtResource("7_gg4pt")]
visible = false
game = NodePath("../..")

[node name="WaveIntro" parent="Overlays" node_paths=PackedStringArray("Game") instance=ExtResource("8_wnrko")]
visible = false
Game = NodePath("../..")
